--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 astropy==4.1
+black==22.8.0
 bokeh==2.3.3
 cached-property==1.5.2
 certifi==2022.12.7
@@ -10,6 +11,7 @@ crystals==1.2.2
 cycler==0.11.0
 Cython==0.29.33
 dask==2021.3.0
+dataclasses==0.8
 decorator==4.4.2
 diffractem==0.4.1
 distributed==2021.3.0
@@ -40,8 +42,10 @@ opencv-python==4.7.0.72
 packaging==21.3
 pandas==1.1.5
 partd==1.2.0
+pathspec==0.9.0
 PeakUtils==1.3.4
 Pillow==8.4.0
+platformdirs==2.4.0
 psutil==5.9.4
 PyCifRW==4.4.5
 pyparsing==3.0.9
@@ -65,8 +69,10 @@ spglib==1.16.5
 tblib==1.7.0
 threadpoolctl==3.1.0
 tifffile==2020.9.3
+tomli==1.2.3
 toolz==0.12.0
 tornado==6.1
+typed-ast==1.5.4
 typing_extensions==4.1.1
 urllib3==1.26.14
 zict==2.1.0
