--- a/requirements.txt
+++ b/requirements.txt
@@ -1,55 +1,80 @@
-bison==0.1.3
-black==23.3.0
+astropy==4.1
+black==22.8.0
+bokeh==2.3.3
+cached-property==1.5.2
 cbf==1.2.0
-certifi==2023.7.22
-charset-normalizer==3.2.0
-click==8.1.6
+certifi==2022.12.7
+charset-normalizer==2.0.12
+click==8.0.4
+cloudpickle==2.2.1
+contextvars==2.4
+crystals==1.2.2
 cycler==0.11.0
-dataclasses==0.6
-DateTime==5.2
-fabio==2023.6.0
-flex==6.14.1
-fonttools==4.38.0
-h5py==3.8.0
-hdf5plugin==4.3.0
+Cython==0.29.33
+dask==2021.3.0
+dataclasses==0.8
+decorator==4.4.2
+diffractem==0.4.1
+distributed==2021.3.0
+fabio==0.14.0
+fsspec==2022.1.0
+h5py==3.1.0
+hdf5plugin==3.3.1
+HeapDict==1.0.1
 idna==3.4
-imageio==2.31.2
-importlib-metadata==6.7.0
-joblib==1.3.2
-jsonpointer==2.4
-kiwisolver==1.4.4
-matplotlib==3.5.3
-msgpack==1.0.5
+imageio==2.15.0
+immutables==0.19
+importlib-metadata==4.8.3
+Jinja2==3.0.3
+joblib==1.1.1
+kiwisolver==1.3.1
+llvmlite==0.36.0
+locket==1.0.0
+MarkupSafe==2.0.1
+matplotlib==3.3.4
+msgpack==1.0.4
 mypy-extensions==1.0.0
-numpy==1.21.6
+networkx==2.5.1
+npstreams==1.6.4
+numba==0.53.1
+numpy==1.19.5
 ondamonitor==21.5.0
-packaging==23.1
-pandas==1.3.5
-pathspec==0.11.2
-Pillow==9.5.0
-platformdirs==4.0.0
-ply==3.11
-pyparsing==3.1.1
-PyQt5==5.15.9
+opencv-python==4.7.0.72
+packaging==21.3
+pandas==1.1.5
+partd==1.2.0
+pathspec==0.9.0
+PeakUtils==1.3.4
+Pillow==8.4.0
+platformdirs==2.4.0
+psutil==5.9.4
+PyCifRW==4.4.5
+pyparsing==3.0.9
+PyQt5==5.15.6
 PyQt5-Qt5==5.15.2
-PyQt5-sip==12.12.2
-pyqtgraph==0.12.4
+PyQt5-sip==12.9.1
+pyqtgraph==0.11.1
 python-dateutil==2.8.2
-pytz==2023.3
-PyYAML==6.0.1
-pyzmq==25.1.0
-requests==2.31.0
-rfc3987==1.3.8
-scikit-learn==1.0.2
-scipy==1.7.3
-sip==4.19.25
+pytz==2022.7.1
+PyWavelets==1.1.1
+PyYAML==6.0
+pyzmq==25.0.0
+requests==2.27.1
+scikit-image==0.17.2
+scikit-learn==0.24.2
+scikit-ued==2.1.0
+scipy==1.5.4
 six==1.16.0
-strict-rfc3339==0.7
+sortedcontainers==2.4.0
+spglib==1.16.5
+tblib==1.7.0
 threadpoolctl==3.1.0
-tomli==2.0.1
-typed-ast==1.5.5
-typing_extensions==4.7.1
-urllib3==2.0.4
-validate-email==1.3
-zipp==3.15.0
-zope.interface==6.0
+tifffile==2020.9.3
+tomli==1.2.3
+toolz==0.12.0
+tornado==6.1
+typed-ast==1.5.4
+typing_extensions==4.1.1
+urllib3==1.26.14
+zict==2.1.0
+zipp==3.6.0
