--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-astropy==4.1
 black==22.8.0
 bokeh==2.3.3
 cached-property==1.5.2
@@ -64,10 +63,12 @@ scikit-image==0.17.2
 scikit-learn==0.24.2
 scikit-ued==2.1.0
 scipy==1.5.4
+seaborn==0.11.2
 six==1.16.0
 sortedcontainers==2.4.0
 spglib==1.16.5
 tblib==1.7.0
+tenacity==8.2.2
 threadpoolctl==3.1.0
 tifffile==2020.9.3
 tomli==1.2.3
